--- a/Proyecto.html
+++ b/Proyecto.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <title>Proyecto</title>
-
+    <link rel="stylesheet" href="./Styles.css">
+<header>
+    <h1>Proyecto1</h1>
+</header>
 </head>
 <body>
     <Div>
